--- a/public/templates/index.dust
+++ b/public/templates/index.dust
@@ -2,4 +2,17 @@
 
 {<body}
     <h1>{@pre type="content" key="greeting"/}</h1>
+	
+	{#messages}
+		{.}
+		<br/>
+	{/messages}
+
+	{@pre type="content" key="firstMessage"/}
+	<br/>
+	{@pre type="content" key="secondMessage"/}
+	<br/>
+
+	<a href="/ko">go to ko</a>
+
 {/body}
